--- a/elements/pfe-navigation/src/pfe-navigation-item.scss
+++ b/elements/pfe-navigation/src/pfe-navigation-item.scss
@@ -68,14 +68,14 @@ $variables: (
   --pfe-navigation__trigger--FontSize: 12px;
   --pfe-navigation__trigger--Padding: calc(#{pfe-var(container-padding)} / 2) calc(#{pfe-var(container-padding)} *.5);
   --pfe-navigation__trigger-icon--Visible: hidden;
-  flex: 1 0 calc(#{pfe-var(container-padding)} * 4);
+  flex: 1 0 22%;
 
   @media screen and (max-height: 500px) {
     --pfe-navigation__trigger--Padding: calc(#{pfe-var(container-padding)} / 3) calc(#{pfe-var(container-padding)} *.5);
   }
 
-  @media screen and (min-width: #{pfe-breakpoint(lg)}) {
-    text-align: center;
+  @media screen and (min-width: 1024px) {
+    flex: 1 0 26%;
   }
 }
 
@@ -338,7 +338,6 @@ $variables: (
 
 ::slotted([slot="tray"]) {
   display: flex;
-  flex-grow: 1;
   justify-content: center;
 }
 
